# OpenHMD

./: .gitignore  CMakeLists.txt
cmake/: FindHIDAPI.cmake
examples/simple/: CMakeLists.txt  Makefile.am  simple.c  test_wick.c
hidapi/lib/Release/: hidapi.lib
src/: openhmd.c  openhmdi.h
src/drv_external/: external.c
src/drv_otus/: Otus数据格式说明.docx  otus.c  otus.h  otus_cmd.c  otus_cmd.h  otus_packet.c
src/drv_wick/: packet.c  wick.c  wick.h  wick_cmd.c  wick_cmd.h
src/drv_wmr/: wmr.c
